# automark

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
prompts/: 01-initialize-project.md  03-create-repository-trait.md  04-implement-automerge-repository.md  05-create-cli-structure.md  06-implement-add-command.md  07-implement-list-command.md  08-implement-delete-command.md  08-implement-sync-command.md  10-integrate-metadata-extraction.md
prompts/complete/: 01-enhance-bookmark-types.md  02-create-bookmark-types.md  02-create-metadata-extractor-trait.md  03-enhance-repository-trait.md  04-implement-enhanced-automerge-repository.md  05-enhance-cli-with-json-output.md  06-implement-search-command.md  07-implement-configuration-management.md  08-implement-sync-websocket.md  09-implement-tui-foundation.md  09-wire-everything-together.md
specs/: bookmarking-application-spec.md  mvp-spec.md  technical-architecture.md
src/: main.rs
src/adapters/: automerge_repo.rs  file_storage.rs  mod.rs  web_extractor.rs
src/commands/: add.rs  auto_sync.rs  delete.rs  list.rs  mod.rs  search.rs  sync.rs  tui.rs
src/traits/: metadata_extractor.rs  mod.rs  repository.rs
src/tui/: app.rs  mod.rs
src/tui/components/: bookmark_detail.rs  bookmark_list.rs  mod.rs  search_bar.rs  status_bar.rs
src/tui/handlers/: keyboard.rs  mod.rs
src/types/: bookmark.rs  config.rs  mod.rs
