[package]
name = "automark"
version = "0.1.0"
edition = "2021"
description = "A local-first CLI bookmarking application"

[dependencies]
automerge = "0.6.1"
clap = { version = "4.0", features = ["derive"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
url = "2.4"
tokio = { version = "1.0", features = ["full", "io-std"] }
anyhow = "1.0"
thiserror = "1.0"
serde_json = "1.0"
async-trait = "0.1"
dirs = "5.0"
reqwest = { version = "0.11", default-features = true }
scraper = "0.17"
config = "0.14"
toml = "0.8"
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
cbor4ii = { version = "0.3", features = ["serde1", "use_std"] }
ratatui = "0.28"
crossterm = "0.28"

[dev-dependencies]
tempfile = "3.0"
regex = "1.0"